--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
     <title>Weather App</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="search__box">
+            <i class="fa-solid fa-location-dot"></i>
+        </div>
+    </div>
+
+    <script src="https://kit.fontawesome.com/db47ece932.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
 </html>
