--- a/index.html
+++ b/index.html
@@ -10,9 +10,36 @@
     <title>Weather App</title>
 </head>
 <body>
-    <div class="container">
+    <div class="weather__container container">
         <div class="search__box">
             <i class="fa-solid fa-location-dot"></i>
+            <input type="text" placeholder="Enter your location">
+            <button class="fa-solid fa-magnifying-glass"></button>
+        </div>
+        <div class="not__found">
+            <img width="500" height="500" src="images/404.png" alt="Not found">
+            <p>Oops! Invalid location!</p>
+        </div>
+        <div class="weather__box">
+            <img src="" alt="">
+            <p class="temperature"></p>
+            <p class="description"></p>
+        </div>
+        <div class="weather__details">
+            <div class="humidity">
+                <i class="fa-solid fa-water"></i>
+                <div class="text">
+                    <span></span>
+                    <p>Humidity</p>
+                </div>
+            </div>
+            <div class="wind">
+                <i class="fa-solid fa-wind"></i>
+                <div class="text">
+                    <span></span>
+                    <p>Wind Speed</p>
+                </div>
+            </div>
         </div>
     </div>
 
