--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="weather__container container">
         <div class="search__box">
             <i class="fa-solid fa-location-dot"></i>
-            <input type="text" placeholder="Enter your location">
+            <input class="enter__location" type="text" placeholder="Enter your location">
             <button class="fa-solid fa-magnifying-glass"></button>
         </div>
         <div class="not__found">
