--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
             <button class="fa-solid fa-magnifying-glass"></button>
         </div>
         <div class="not__found">
-            <img width="500" height="500" src="images/404.png" alt="Not found">
+            <img src="images/404.png" alt="Not found">
             <p>Oops! Invalid location!</p>
         </div>
         <div class="weather__box">
-            <!-- <img src="" alt=""> -->
+            <img src="">
             <p class="temperature"></p>
             <p class="description"></p>
         </div>
