--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <p>Oops! Invalid location!</p>
         </div>
         <div class="weather__box">
-            <img src="">
+            <!-- <img src=""> -->
             <p class="temperature"></p>
             <p class="description"></p>
         </div>
