--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
         <div class="search__box">
             <i class="fa-solid fa-location-dot"></i>
             <input class="enter__location" type="text" placeholder="Enter your location">
-            <button class="fa-solid fa-magnifying-glass"></button>
+            <button id="search__btn" class="fa-solid fa-magnifying-glass"></button>
         </div>
         <div class="not__found">
             <img src="images/404.png" alt="Not found">
             <p>Oops! Invalid location!</p>
         </div>
         <div class="weather__box">
-            <!-- <img src=""> -->
+            <img class="weather__img" src="">
             <p class="temperature"></p>
             <p class="description"></p>
         </div>
