Fixed error with image

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="css/index.css">
     <title>Weather App</title>
 </head>
+
 <body>
     <div class="weather__container container">
         <div class="search__box">
@@ -21,7 +23,7 @@
             <p>Oops! Invalid location!</p>
         </div>
         <div class="weather__box">
-            <img class="weather__img">
+            <img class="weather__img" src="">
             <p class="temperature"></p>
             <p class="description"></p>
         </div>
@@ -46,4 +48,5 @@
     <script src="https://kit.fontawesome.com/db47ece932.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
 </body>
+
 </html>
