--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Oops! Invalid location!</p>
         </div>
         <div class="weather__box">
-            <img class="weather__img" src="images/clear.png">
+            <img class="weather__img" src="images/clear.png" alt="Weather image">
             <p class="temperature"></p>
             <p class="description"></p>
         </div>
