Added class greeting and functionality for changed text

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+    <div class="greeting"></div>
     <div class="weather__container container">
         <div class="search__box">
             <i class="fa-solid fa-location-dot"></i>
