Added icons for app

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="images/weather-icon.png">
+    <link rel="shortcut icon" href="icons/weather-icon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link rel="stylesheet" href="css/index.css">
     <title>Weather App</title>
@@ -30,14 +30,14 @@
         </div>
         <div class="weather__details">
             <div class="humidity">
-                <i class="fa-solid fa-water"></i>
+                <i class="fas fa-water"></i>
                 <div class="text">
                     <span></span>
                     <p>Humidity</p>
                 </div>
             </div>
             <div class="wind">
-                <i class="fa-solid fa-wind"></i>
+                <i class="fas fa-wind"></i>
                 <div class="text">
                     <span></span>
                     <p>Wind Speed</p>
