--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
         </div>
         <div class="weather__details">
             <div class="humidity">
-                <i class="fas fa-water"></i>
+                <img class="humidity__img" src="icons/low-humidity.png" alt="Humidity">
                 <div class="text">
                     <span></span>
                     <p>Humidity</p>
                 </div>
             </div>
             <div class="wind">
-                <i class="fas fa-wind"></i>
+                <img class="wind__img" src="icons/low-wind.png" alt="Wind">
                 <div class="text">
                     <span></span>
                     <p>Wind Speed</p>
