Optimised js code

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <script src="https://kit.fontawesome.com/db47ece932.js" crossorigin="anonymous"></script>
     <script src="index.js"></script>
+    <script src="change-background.js"></script>
 </body>
 
 </html>
